--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: "Roboto", Times, serif;
+    margin: 0;
 }
 
 .headerlogo {
@@ -45,6 +46,7 @@ a {
     justify-content: space-between;
     align-items: center;
     max-height: 60px;
+    
 }
 
 .intro {
@@ -78,5 +80,99 @@ button {
     font-size: 18px;
     font-weight: 600;
     padding: 10px;
+    
 }
 
+.gallery-section {
+    background-color: #F9FAF8; 
+    padding-left: 200px ;
+    padding-right: 200px ; 
+    flex: 1;  
+}
+
+.gallery-section h2 {
+    text-align:center;
+    margin-top: 35px;
+    margin-bottom: 35px;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.q-img {
+    width: 190px;
+    height: auto;
+    border-radius: 10%;
+    border-style: solid;
+    border-color: #3882F6 ;
+    
+}
+
+.images {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    margin-bottom: 60px
+}
+
+.imgtext {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    color: rgb(71, 74, 77);
+    font-weight: 500;
+}
+
+.slogan {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    padding: 60px 250px ;
+    color: rgb(71, 74, 77);
+    background-color: #E5E7EB;
+}
+
+.qauthor {
+    color:#1F2937;
+    text-align: end;
+    font-family: "Roboto", Times, serif;
+    font-style: normal;
+    font-size: 24px;
+    font-weight: 800;
+}
+
+p {
+    margin: 5px;
+}
+
+.signup {
+    display: flex;
+    margin: 130px 250px;
+    background-color: #3882F6;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 60px;
+    border-radius: 6px;
+    font-size: 24px;
+    font-weight: 800;
+}
+
+.signuptextsmall {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.subutton {
+    border: 2px solid white;
+    padding: 6px;
+}
+
+.footer {
+    color: white;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    padding: 40px 40px;
+}
